test/ui/tests/packages/circular-components-two-packages/package.stderr
error: the components `right` and `left` are circular
 --> ${DIRECTORY}/packages/circular-components-two-packages/right/package.metadata:5:74
  |
5 | components: [ { type: "library", path: "content.lushui", dependencies: { left: { path: ".." } } } ],
  |                                                                          ^^^^ 
  |

error: aborting due to previous error

